<resources>
    <string name="app_name">Demo</string>
    <string name="slot1">轨道1</string>
    <string name="slot2">轨道2</string>
    <string name="slot3">轨道3</string>
    <string name="enter_station">进入车站</string>
    <string name="leave_station">离开车站</string>
    <string name="inuse">占用中</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="exit">离开</string>
</resources>