<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/slotOne"
            android:hint="@string/slot1"
            android:textSize="20sp"
            android:gravity="center">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/slotTwo"
            android:hint="@string/slot2"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/slotThree"
            android:hint="@string/slot3"
            android:textSize="20sp"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/enter_station"
            android:textSize="20sp"
            android:id="@+id/enter"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/leave_station"
            android:textSize="20sp"
            android:id="@+id/leave"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/status"
            android:gravity="center"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/exit"
            android:text="离开"
            android:textSize="20sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>